# crosswise

./: AGENTS.md  LICENSE  README.md  pyproject.toml
data/evaluation/: evaluation_v1_0.json
data/ground_truth/: ground_truth_v1_0.json
data/reconciliation/: reconciliation_v1_0.json
data/reliability/: reliability_v1_0.json
data/synthetic/: fixtures_v1_0.json
docs/evidence/: CROSSWISE_LOCAL_EVIDENCE_REPORT_v1.0.md  CROSSWISE_SLICE_10_INTERACTIVE_DOCUMENT_PANEL_REVIEWER_v1.0.md  CROSSWISE_SLICE_1_SYNTHETIC_DATA_GENERATOR_v1.0.md  CROSSWISE_SLICE_2_SCHEMA_VALIDATION_AND_NORMALIZATION_v1.0.md  CROSSWISE_SLICE_3_RECONCILIATION_BASELINE_AND_LINE_ITEM_MATCHING_v1.0.md  CROSSWISE_SLICE_4_EVALUATION_HARNESS_AND_DISCREPANCY_METRICS_v1.0.md  CROSSWISE_SLICE_5_CONFIDENCE_ROUTING_AND_RELIABILITY_LAYER_v1.0.md  CROSSWISE_SLICE_6_LOCAL_REPORT_GENERATION_AND_EVIDENCE_SUMMARY_v1.0.md  CROSSWISE_SLICE_7_LOCAL_REVIEW_DASHBOARD_STATIC_REVIEWER_INTERFACE_v1.0.md  CROSSWISE_SLICE_8_README_DEMO_POLISH_AND_FRESH_CLONE_REPRODUCTION_PATH_v1.0.md  CROSSWISE_SLICE_9_DOCUMENT_PANEL_RECONCILIATION_VIEW_v1.0.md  INDEX.md  crosswise_reviewer_v1_0.html
scripts/: evaluate_reconciliation.py  generate_documents.py  generate_report.py  generate_reviewer.py  generate_synthetic_data.py  run_full_pipeline.py  run_reconciliation.py  score_reliability.py  validate_fixtures.py
src/crosswise/: __init__.py
tests/: test_documents.py  test_evaluation.py  test_generation.py  test_reconciliation.py  test_reliability.py  test_reporting.py  test_reproduction_path.py  test_reviewer.py  test_validation.py
(+41 files in other folders)
